fix(Links): overflow issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,6 +22,20 @@ html {
   @apply border-l-brand-500;
 }
 
+/* https://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container/ */
+.dont-break-out {
+  /* These are technically the same, but use both */
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  /* Instead use this non-standard one: */
+  word-break: break-word;
+
+  /* Adds a hyphen where the word breaks, if supported (No Blink) */
+  hyphens: auto;
+
+}
+
 .notion-quote:before {
   position: absolute;
   font-family: emoji;
